refactor: migrate filter class registry to `CoreState` for improved test isolation and state management
- Replace `FilterMaster` static field with `CoreState`-managed registry
- Deprecate `FilterMaster.setFilterClasses` in favor of `Core.setFilterClasses`
- Update tests and production initialization to use `CoreState`-backed registry
- Introduce TestCoreState.initFilters utility to avoid ordering trap of the setFilterClasses and setFilterMaster(createDefaultFiltersConfig()) pattern.
- Add ADR#2026003 to explain a change